# spyDroid

./: .gitignore  .gitmodule  CMakeLists.txt  LICENSE  README.md  build.gradle.kts  cp_dependencies.sh  gradle.properties  key_store.jks  script.sh  settings.gradle  settings.gradle.kts
app/: .gitignore  build.gradle  build.gradle.kts  local.properties  proguard-rules.pro
common/: build.gradle.kts
core-data/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
core-data/src/main/: AndroidManifest.xml
core-data/src/main/java/net/spydroid/core/data/common/: GLOBAL_STATES_PERMISSIONS.kt  GlobalViewModel.kt  PERMISSIONS.kt  PERMISSIONS_STATES.kt  PermissionsManager.kt
core-data/src/main/java/net/spydroid/core/data/data/: ChatBubbleRepositoryImp.kt  GLOBAL_STATES_PERMISSIONS.kt  LOCATION_STATES.kt  PERMISSIONS.kt  PreferenceManagerRepositoryImp.kt
core-data/src/main/java/net/spydroid/core/data/di/: DataModule.kt
core-data/src/main/java/net/spydroid/core/data/domain/: ChatBubbleRepository.kt  PreferenceManagerRepository.kt
core-data/src/main/java/net/spydroid/core/data/local/: PreferencesManager.kt
core-data/src/main/java/net/spydroid/core/data/models/: ChatBubbleProvider.kt  CurrentLocation.kt  STATES_LOCATION.kt
core-data/src/main/java/net/spydroid/core/data/models/permissions/: CALLS_STATE.kt  CAMERA_STATE.kt  CONTACTS_STATE.kt  INTERNET_STATE.kt  LOCATION_STATE.kt  MULTIMEDIA_STATE.kt  TEXT_SMS_STATE.kt
core-data/src/main/java/net/spydroid/core/data/repository/: ChatBubbleRepository.kt  PreferenceManagerRepository.kt
core-data/src/spydroid/data/data/: SmsRepositoryImp.cpp
core-data/src/spydroid/data/domain/: DevicesRepository.h  InfoRepository.h  MultimediaRepository.h  SmsRepository.h
core-data/src/spydroid/data/local/: CleanManager.cpp  CleanManager.h  FilesManager.cpp  FilesManager.h  SettingsManager.cpp  SettingsManager.h
core-data/src/spydroid/data/models/: DevicesHandler.h  InfoHandler.h  MultimediaHandler.h
core-data/src/test/java/net/spydroid/core/data/: ExampleUnitTest.kt
core-database/: build.gradle.kts
core-mf/: build.gradle.kts
core-network/: CMakeLists.txt
core-network/src/spydroid/network/api/: ApiService.cpp  ApiService.h
core-network/src/spydroid/network/daos/: DevicesDao.h  InfoDao.h  MultimediaDao.h  SmsDao.h
core-network/src/spydroid/network/data/: DevicesDaoImp.cpp  InfoDaoImp.cpp  MultimediaDaoImp.cpp  SmsDaoImp.cpp
core-network/src/spydroid/network/models/: Devices.h  Info.h  Sms.h
core-network/src/spydroid/network/services/: DownloaderService.cpp  DownloaderService.h
core-ui/: CMakeLists.txt  build.gradle.kts
core-ui/src/androidTest/java/net/spydroid/core/ui/: ExampleInstrumentedTest.kt
core-ui/src/main/java/net/spydroid/core/ui/components/dialogs/: PermissionDialog.kt  PermissionLocation.kt  dialog.kt  dialogDefaults.kt
core-ui/src/main/java/net/spydroid/core/ui/components/permissions/: Permissions.kt  PermissionsDefaults.kt  PermissionsImp.kt  RequestPermission.kt  RequestPermissionComponent.kt
core-ui/src/spydroid/ui/presentation/: ApkStudioScreen.cpp  ApkStudioScreen.h  AudiosScreen.cpp  DashBoardScreen.cpp  DashBoardScreen.h  DocumentsScreen.cpp  DocumentsScreen.h  HomeScreen.cpp  HomeScreen.h  IDEScreen.cpp  IDEScreen.h  ImagesScreen.cpp  ImagesScreen.h  InstallerScreen.cpp  InstallerScreen.h  MultimediaScreen.cpp  MultimediaScreen.h  ServerStudioScreen.cpp  ServerStudioScreen.h  SmsScreen.cpp  SmsScreen.h  TemplateScreen.cpp  TemplateScreen.h  VideosScreen.cpp  VideosScreen.h
core-ui/src/spydroid/ui/widgets/: BannerHorizontal.cpp  BannerHorizontal.h  BottomBarInstaller.cpp  BottomBarInstaller.h  BrowserSetup.cpp  BrowserSetup.h  CardMultimedia.h  CardOptions.cpp  CardOptions.h  CardSms.cpp  CardSms.h  CardTemplate.cpp  CardTemplate.h  CardWidgetInstaller.cpp  CardWidgetInstaller.h  CardWidgetSettings.cpp  CardWidgetSettings.h  CardWidgetVerify.cpp  CardWidgetVerify.h  CodeEditor.cpp  CodeEditor.h  CodeSyntaxHighlighter.h  ConfigurationTemplate.cpp  ConfigurationTemplate.h  FileExplorer.cpp  FileExplorer.h  FileWidget.cpp  FileWidget.h  GoBack.cpp  HeaderConfigurationTemplate.cpp  HeaderConfigurationTemplate.h  ItemBoard.cpp  ItemBoard.h  SelectTemplate.cpp  SelectTemplate.h  SettingsTemplate.cpp  SettingsTemplate.h  Setup.cpp  Setup.h  SetupFinished.cpp  (+7 more)
core-ui/src/test/java/net/spydroid/core/ui/: ExampleUnitTest.kt
feature-calls/: build.gradle.kts
feature-camera/: build.gradle.kts
feature-contacts/: build.gradle.kts
feature-location/: build.gradle.kts
feature-multimedia/: build.gradle.kts  consumer-rules.pro
include/: libcurl.so.4  (+11 more)
resources/: CMakeLists.txt  resources.qrc  spydroid.desktop
resources/drawable/: linuxmint-22-xfce-64bit.iso.torrent
spydroid/: CMakeLists.txt
spydroid/app/src/main/net/spydroid/desktop/: main.cpp  main.cxx
spydroid/app/src/main/net/spydroid/desktop/data/: VncConnect.cpp  VncConnect.h  colors.cpp
spydroid/app/src/main/net/spydroid/desktop/models/: VncData.h
spydroid/app/src/main/net/spydroid/desktop/presentation/: home.cpp  home.h  profile.cpp  profile.h
spydroid/app/src/main/net/spydroid/desktop/remote/data/: DevicesRepositoryImp.cpp
spydroid/app/src/main/net/spydroid/desktop/remote/domain/: DevicesRepository.h
spydroid/app/src/main/net/spydroid/desktop/remote/models/: DevicesHandler.h
spydroid/app/src/main/net/spydroid/desktop/remote/network/api/: ApiService.cpp  ApiService.h
spydroid/app/src/main/net/spydroid/desktop/remote/network/daos/: DevicesDao.cpp  DevicesDao.h
spydroid/app/src/main/net/spydroid/desktop/remote/network/data/: DevicesDaoImp.cpp
spydroid/app/src/main/net/spydroid/desktop/remote/network/models/: Devices.h
spydroid/features/vncviewer/: DesktopWindow.cxx  vncviewer.cxx  vncviewer.h
spydroid/release/: maketarball
spydroid/spydroid/: spydroid
spydroid/tests/perf/: decperf  encperf  fbperf
spydroid/tests/unit/: conv  gesturehandler  unicode
spydroid/unix/vncconfig/: vncconfig
spydroid/unix/vncpasswd/: vncpasswd
spydroid/unix/vncserver/: vncserver@.service
spydroid/unix/x0vncserver/: x0vncserver
(+514 files in other folders)
